* update for the newsletter sample

--- a/xml/index.html
+++ b/xml/index.html
@@ -13,7 +13,7 @@
 		<form>
 			<textarea name="xml" id="xml" cols="75" rows="15"></textarea>
 			<br>
-			<button type="button" onclick="return ParseXML(form.xml.value);">Parse</button>
+			<button type="button" onclick="ParseXML(form.xml.value)">Parse</button>
 		</form>
 		<div class="rss-reader"></div>
 	</center>
